Add back commons-io to deal with loading resources from OSGi bundles